--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,23 @@
 /* Général */
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,900&display=swap");
 
-* { /* "*" Permet de prendre tout du fichier html, on met ensuite les valeurs à 0 pour que tout colle (qu'il n'y est pas d'espace blanc sur les cotés) */
+* {
+  /* "*" Permet de prendre tout du fichier html, on met ensuite les valeurs à 0 pour que tout colle (qu'il n'y est pas d'espace blanc sur les cotés) */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Merriweather;
-}
+    }
 
 /* Création de variables de couleurs pour toujours garder les mêmes sans se tromper */
-:root{
+:root {
     --main-white: #fff;
     --main-black: #000;
     --main-grey: #ebebeb;
     --main-gold: #c99049;
-}    
+}
 
-a{
+a {
     text-decoration: none;
     color: var(--main-white);
 }
@@ -24,45 +25,45 @@ a{
 /* Fin Général */
 
 /* Header */
-header{
+header {
     background-image: url("../img/header.JPG");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 /* nav */
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     padding: 2%;
 }
 
-.navLinksLeft{
+.navLinksLeft {
     width: 35%;
 }
 
-.navLinksLeft a{
+.navLinksLeft a {
     padding: 4% 5%;
 }
 
-.navLinksRight a, .navLinksRight a{
+.navLinksRight a, .navLinksRight a {
     padding: 4% 5%;
 }
 
-nav a:hover{
+nav a:hover {
     background-color: var(--main-white);
     color: var(--main-black);
     transition: 1s;
 }
 
-.imageNav{
+.imageNav {
     width: 13%;
     position: absolute;
     top: 0;
     left: 30%;
 }
 
-.navLinksRight{
+.navLinksRight {
     width: 50%;
 }
 
@@ -74,50 +75,51 @@ nav a:hover{
 }
 /* Fin nav */
 
-.header{
+.header {
     display: flex;
     justify-content: space-evenly;
     padding: 5% 14% 0 0;
 }
 
-.headerLeft{
+.headerLeft {
     display: flex;
     flex-direction: column;
     padding: 12% 0 25% 0;
 }
 
-.headerLeft h1{
+.headerLeft h1 {
     color: var(--main-white);
 }
 
-.line2{
+.line2 {
     background-color: var(--main-gold);
     width: 90%;
     margin: auto;
     height: 1px;
 }
 
-.headerRight{
+.headerRight {
     padding: 23% 0 11% 0;
 }
 /* Fin Header */
 
 /* Main */
 
-.title{ /* pour tous les titres des blocs */
+.title {
+  /* pour tous les titres des blocs */
     padding: 5% 0 2% 0;
     margin: auto;
     text-transform: uppercase;
     text-align: center;
 }
 
-main section{
+main .section {
     display: flex;
     flex-direction: column;
     margin: 0 6%;
 }
 
-.lineMain{
+.lineMain {
     background-color: var(--main-gold);
     width: 8%;
     margin: 0 auto 2% auto;
@@ -125,27 +127,27 @@ main section{
 }
 
 /* Section 1 */
-.aboutBlocks{
+.aboutBlocks {
     display: flex;
     width: 100%;
     margin: 2% auto;
 }
 
-.aboutLeft{
+.aboutLeft {
     width: 50%;
     padding: 0 2% 0 0;
 }
 
-.aboutLeft p{
+.aboutLeft p {
     padding-bottom: 2%;
     line-height: 1.8rem;
 }
 
-.aboutRight{
-    width: 50%
+.aboutRight {
+    width: 50%;
 }
 
-.aboutRight img{
+.aboutRight img {
     width: 100%;
 }
 
@@ -159,16 +161,20 @@ main section{
 }
 
 /* carrousel */
-.carrousel{
+.carrousel {
     position: relative;
-    margin-bottom: 5%;
+    margin: auto auto 5% auto;
 }
 
-.carrousel img{
+.carrousel img {
     width: 100%;
 }
 
-#back, #forward{
+.slides{
+    width: fit-content;
+}
+
+#back, #forward {
     cursor: pointer;
     position: absolute;
     width: auto;
@@ -183,6 +189,302 @@ main section{
     opacity: 1;
 }
 
-#forward{
+#forward {
     right: 0;
+}
+
+/* Section 3 */
+
+.chronoLine{
+    position: relative;
+    margin: 15% auto;
+    padding-bottom: 12%;
+}
+
+.timeline {
+    width: 800px;
+    height: 20px;
+    list-style: none;
+    text-align: justify;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background: -moz-linear-gradient(
+        top,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 45%,
+        rgba(191, 128, 11, 1) 51%,
+        rgba(255, 255, 255, 0) 57%,
+        rgba(255, 255, 255, 0) 100%);
+    background: -webkit-gradient(
+        left top,
+        left bottom,
+        color-stop(0%, rgba(255, 255, 255, 0)),
+        color-stop(45%, rgba(255, 255, 255, 0)),
+        color-stop(51%, rgba(191, 128, 11, 1)),
+        color-stop(57%, rgba(255, 255, 255, 0)),
+        color-stop(100%, rgba(255, 255, 255, 0)));
+    background: -webkit-linear-gradient(
+        top,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 45%,
+        rgba(191, 128, 11, 1) 51%,
+        rgba(255, 255, 255, 0) 57%,
+        rgba(255, 255, 255, 0) 100%);
+    background: -o-linear-gradient(
+        top,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 45%,
+        rgba(191, 128, 11, 1) 51%,
+        rgba(255, 255, 255, 0) 57%,
+        rgba(255, 255, 255, 0) 100%);
+    background: -ms-linear-gradient(
+        top,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 45%,
+        rgba(191, 128, 11, 1) 51%,
+        rgba(255, 255, 255, 0) 57%,
+        rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 45%,
+        rgba(191, 128, 11, 1) 51%,
+        rgba(255, 255, 255, 0) 57%,
+        rgba(255, 255, 255, 0) 100%);
+}
+
+.timeline:after {
+    display: inline-block;
+    content: "";
+    width: 100%;
+}
+
+.timeline li {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: var(--main-gold);
+    text-align: center;
+    line-height: 1.2;
+    position: relative;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.timeline li:before {
+    display: inline-block;
+    content: attr(data-year);
+    font-size: 26px;
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.timeline li:nth-child(odd):before {
+    top: -40px;
+}
+.timeline li:nth-child(even):before {
+    bottom: -40px;
+}
+
+.timeline li:after {
+    display: inline-block;
+    content: attr(data-text);
+    font-size: 16px;
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.timeline li:nth-child(odd):after {
+    bottom: 0;
+    margin-bottom: -10px;
+    -webkit-transform: translate(-50%, 100%);
+    -moz-transform: translate(-50%, 100%);
+    -ms-transform: translate(-50%, 100%);
+    -o-transform: translate(-50%, 100%);
+    transform: translate(-50%, 100%);
+}
+.timeline li:nth-child(even):after {
+    top: 0;
+    margin-top: -10px;
+    -webkit-transform: translate(-50%, -100%);
+    -moz-transform: translate(-50%, -100%);
+    -ms-transform: translate(-50%, -100%);
+    -o-transform: translate(-50%, -100%);
+    transform: translate(-50%, -100%);
+}
+
+/* Section 4 */
+
+#experiences{
+    margin: 3% auto;
+    padding: 0 10%;
+    background-color: var(--main-grey);
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline2 {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+  /* The actual timeline (the vertical ruler) */
+.timeline2::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+  /* Container around content */
+.container {
+    padding: 10px 140px 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+  /* The circles on the timeline */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid var(--main-gold);
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+  /* Place the container to the left */
+.left {
+    left: 0;
+}
+
+  /* Place the container to the right */
+.right {
+    left: 50%;
+}
+
+  /* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+  /* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+  /* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+  /* The actual content */
+.content {
+    padding: 30px 142px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Section 5 */
+.inlineIcons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    margin: 5%;
+}
+
+.icons{
+    display: flex;
+    flex-direction: column;
+}
+
+.icons i{
+    font-size: 40px;
+    padding-bottom: 2%;
+    color: var(--main-gold);
+}
+
+.icons p{
+    font-weight: bold;
+}
+
+
+/* Responsive */
+
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+.timeline2::after {
+    left: 31px;
+}
+
+  /* Full-width containers */
+.container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+}
+
+  /* Make sure that all arrows are pointing leftwards */
+.container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+  /* Make sure all circles are at the same spot */
+.left::after, .right::after {
+    left: 15px;
+}
+
+  /* Make all right containers behave like the left ones */
+    .right {
+    left: 0%;
+}
 }
