--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ a {
 
 /* Animations */
 /* Animation blocs */
-.reveal{
+[class*="reveal-"]{
     opacity: 0;
     transform: translateY(30px);
 }
@@ -33,6 +33,30 @@ a {
     opacity: 1;
     transform: translateY(0);
     transition: 1.4s cubic-bezier(.5, 0, 0, 1);
+}
+
+.reveal-2{
+    transition-delay: .1s;
+}
+
+.reveal-3{
+    transition-delay: .2s;
+}
+
+.reveal-4{
+    transition-delay: .3s;
+}
+
+.reveal-5{
+    transition-delay: .4s;
+}
+
+.reveal-6{
+    transition-delay: .5s;
+}
+
+.reveal-7{
+    transition-delay: .1s;
 }
 /* Animation carrousel */
 .fadeIn {
@@ -70,7 +94,7 @@ nav {
 }
 
 .navLinksLeft {
-    width: 35%;
+    width: 50%;
 }
 
 .navLinksLeft a {
@@ -91,11 +115,15 @@ nav a:hover {
     width: 13%;
     position: absolute;
     top: 0;
-    left: 30%;
+    left: 33%;
 }
 
 .navLinksRight {
     width: 50%;
+}
+
+.mobile{
+    display: none; /* menu burger mis en display none = n'apparait pas dans le dom, à faire réapparaitre au changement de l'écran */
 }
 
 .line {
@@ -108,14 +136,14 @@ nav a:hover {
 
 .header {
     display: flex;
-    justify-content: space-evenly;
-    padding: 3% 10% 0 0;
+    justify-content: space-between;
+    padding: 3% 6% 0 0;
 }
 
 .headerLeft {
     display: flex;
     flex-direction: column;
-    padding: 12% 0 25% 0;
+    padding: 11% 0 25% 7%;
 }
 
 .headerLeft h1 {
@@ -136,8 +164,7 @@ nav a:hover {
 
 /* Main */
 
-.title {
-  /* pour tous les titres des blocs */
+.title {  /* pour tous les titres des blocs */
     padding: 5% 0 2% 0;
     margin: auto;
     text-transform: uppercase;
@@ -181,7 +208,6 @@ main .section {
 .aboutRight img {
     width: 100%;
 }
-
 /* FIN Section 1 */
 
 /* Section 2 */
@@ -199,6 +225,7 @@ main .section {
 
 .carrousel img {
     width: 100%;
+    border-radius: 10px;
 }
 
 .slides{
@@ -209,7 +236,7 @@ main .section {
     cursor: pointer;
     position: absolute;
     width: auto;
-    top: 56%;
+    top: 50%;
     padding: 17px;
     color: grey;
     font-weight: bold;
@@ -516,6 +543,7 @@ footer{
 
 #phone{
     font-size: 1.2rem;
+    color: var(--main-gold);
 }
 
 .iconsFooter{
@@ -547,11 +575,39 @@ form button{
     margin: 0 25% 3% 25%;
     padding: 2% 0;
     border-radius: 10px;
+    background-color: var(--main-gold);
+    border: none;
+    color: var(--main-white);
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+form button:hover{
+    background-color: #c98f4986;
 }
 
 
-
 /* Responsive */
+
+@media screen and (max-width: 1297px){
+    nav{
+        display: block;
+    }
+    .mobile {
+        display: block;
+        width: 30px;
+        float: right;
+    }
+
+    .line{
+        margin: 2% auto;
+    }
+
+    .navLinksLeft, .navLinksRight{
+        display: none;
+    }
+}
 
   /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
