--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ a {
     transition: 1.4s cubic-bezier(.5, 0, 0, 1);
 }
 
-.reveal-2{
+.reveal-2{ /* Pour mettre un délai dans l'apparition des blocs au scroll */
     transition-delay: .1s;
 }
 
@@ -137,28 +137,35 @@ nav a:hover {
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 3% 6% 0 0;
+    margin: 0 6%;
 }
 
 .headerLeft {
     display: flex;
     flex-direction: column;
-    padding: 11% 0 25% 7%;
+    padding: 11% 0 24% 0;
+    width: 50%;
 }
 
-.headerLeft h1 {
+.headerLeft h1, .headerLeft h2 {
     color: var(--main-white);
 }
 
 .line2 {
     background-color: var(--main-gold);
-    width: 90%;
-    margin: auto;
+    width: 60%;
     height: 1px;
+    margin-top: 2%;
 }
 
 .headerRight {
-    padding: 23% 0 11% 0;
+    margin: 24% 1% 0 1%;
+    width: 50%;
+}
+
+.headerRight img {
+    width: 100%;
+    padding: 22% 0% 0 30%;
 }
 /* Fin Header */
 
@@ -609,35 +616,169 @@ form button:hover{
     }
 }
 
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-.timeline2::after {
-    left: 31px;
+@media screen and (max-width: 965px) {
+    .inlineIcons {
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 3%;
+    }
+
+    .icons {
+        padding-bottom: 8%;
+    }
+    
 }
 
-  /* Full-width containers */
-.container {
+@media screen and (max-width: 900px) {
+    .headerLeft h1, .headerLeft h2 {
+        color: var(--main-white);
+        font-size: 18px;
+    }
+    /* Place la timeline sur la gauche */
+    .timeline2::after {
+        left: 31px;
+    }
+
+    /* On met le container avec la largeur à 100% */
+    .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+
+    /* Fait en sorte que toutes les flêches pointent de la gauche */
+    .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+    /* Met les cercles au même niveau */
+    .left::after, .right::after {
+        left: 15px;
+    }
+
+    /* Fait en sorte que tous les containers droits se comportent comme les containers gauches */
+        .right {
+        left: 0%;
+    }
+
+    .content{
+        padding: 12% 22%;
+    }
+
+    .line {
+        margin: 4% auto 0 auto;
+    }
+    
+    main .section {
+        margin: 18% 6%;
+    }
+
+    .timeline {
+        width: 600px;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    .timeline {
+        width: 500px;
+    }
+}
+
+
+@media screen and (max-width: 600px){
+    .aboutBlocks {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .aboutLeft, .aboutRight{
+        width: 100%;
+    }
+
+    .timeline {
+        width: 400px;
+    }
+
+    .timeline li:nth-child(odd):before, .timeline li:nth-child(even):before {
+        font-size: 20px;
+    }
+    
+    .timeline li:nth-child(odd):after, .timeline li:nth-child(even):after {
+        font-size: 12px;
+    }
+
+    .footer{
+        flex-direction: column;
+    }
+
+    .footerLeft, .footerRight{
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 414px) {
+.imageNav {
+    width: 28%;
+    position: absolute;
+    top: 0;
+    left: 33%;
+}
+
+.header {
+    padding: 68% 0;
+}
+
+.headerLeft {
+    padding: 0 0 24% 0;
+}   
+
+.headerRight {
+    margin: 0;
+}
+
+.headerRight img {
+    width: 45%;
+    padding: 0;
+    position: absolute;
+    bottom: 2%;
+}
+
+.lineMain {
+    background-color: var(--main-gold);
+    width: 50%;
+}
+.headerLeft h1, .headerLeft h2 {
+    font-size: 12px;
+}
+.line {
+    margin: 8% auto 0 auto;
+}
+
+main .section {
+    margin: 0 10%;
+    padding: 11% 0;
+}
+
+.chronoLine{
     width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
+    padding: 15% 0;
 }
 
-  /* Make sure that all arrows are pointing leftwards */
-.container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+.timeline {
+    width: 100%;
 }
 
-  /* Make sure all circles are at the same spot */
-.left::after, .right::after {
-    left: 15px;
+.timeline li:nth-child(odd):before, .timeline li:nth-child(even):before {
+    font-size: 18px;
 }
 
-  /* Make all right containers behave like the left ones */
-    .right {
-    left: 0%;
+.timeline li:nth-child(odd):after, .timeline li:nth-child(even):after {
+    font-size: 10px;
 }
+
 }
